--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 body {
-    background-color: #e5e5e5;
-    color: #2e2f2e;
-    font-family: Roboto;
-    font-size: 16px;
+    background-color: #fff;
+    color: #434455;
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
     font-weight: 500;
-    line-height: 24px;
+    
 }
 
 /**
@@ -47,7 +47,7 @@ body {
 
 
 .hero-slogan {
-    Font-family: 'Roboto';
+    font-family: 'Roboto';
         font-style: normal;
         font-weight: 700;
         font-size: 56px;
@@ -56,6 +56,10 @@ body {
     
         text-align: center;
         letter-spacing: 0.02em;
+    
+    
+    
+        color: #FFFFFF;
 
 }
 
