--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body {
-    background-color: #fff;
-    color: #434455;
-    font-family: "Roboto", sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    
+  background-color: #ffffff;
+  color: #2e2f42;
+  font-family: "Roboto", sans-serif;
+
+  color: #434455;
+  color: #4d5ae5;
+  background: #2e2f42;
 }
 
 /**
@@ -12,85 +13,37 @@ body {
   | Header
   |============================
 */
-.menu-link {
-
-    font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 24px;
-        
-    
-        letter-spacing: 0.02em;
-
-    
-        color: #2E2F42;
+.logo-web {
+  color: #4d5ae5;
 }
-
-
+.logo-studio {
+  color: #2e2f42;
+}
+.list-nav {
+  color: #2e2f42;
+}
+.list-addres {
+  color: #434455;
+}
+.list-addres .addres-link:hover,
+.list-addres .addres-link:focus {
+  color: #ffffff;
+  color: #4d5ae5;
+}
 
 /**
   |============================
   | Main content
   |============================
 */
-.hero-section {
-
-    position: absolute;
-        width: 1440px;
-        height: 600px;
-        left: 0px;
-        top: 72px;
-    
-        background: #2E2F42;
-}
-
-
 .hero-slogan {
-    font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 56px;
-        line-height: 60px;
-        /* or 107% */
-    
-        text-align: center;
-        letter-spacing: 0.02em;
-    
-    
-    
-        color: #FFFFFF;
-
+  color: #ffffff;
+  background: #2e2f42;
 }
-
 .buton-hero {
-    background: #4D5AE5;
-    color: #FFFFFF;
-
-    font-family: "Roboto";
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 24px;
-        display: flex;
-            flex-direction: row;
-            align-items: flex-start;
-            padding: 16px 32px;
-            gap: 10px;
-        
-            position: absolute;
-            width: 169px;
-            height: 56px;
-            left: 636px;
-            top: 428px;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-            border-radius: 4px;
-            letter-spacing: 0.04em;
-
+  color: #ffffff;
+  background-color: #4d5ae5;
 }
-
-
-
 /**
   |============================
   | Section Feature 1
