--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body {
 }
 .buton-hero {
   color: #ffffff;
-  background-color: #4d5ae5;
+  background: #4d5ae5;
 }
 /**
   |============================
