--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,90 @@
+:root {
+  --color-iris: #4d5ae5;
+  --color-ocean: #404bbf;
+  --color-navy-blue: #2e2f42;
+  --color-slate: #434455;
+  --color-light-slate: #8e8f99;
+  --color-white: #ffffff;
+  --color-dairy: #fcfcfc;
+  --color-cornflower: #e7e9fc;
+  --color-cloud: #f4f4fd;
+  --color-green: #31d0aa;
+  --color-grey: rgba(46, 47, 66, 0.7);
+  --color-navy-blue-modal: rgba(46, 47, 66, 0.4);
+}
+
 body {
   background-color: #ffffff;
   color: #2e2f42;
   font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
 }
-
+a {
+  text-decoration: none;
+}
+.list {
+  list-style: none;
+}
 /**
   |============================
   | Header
   |============================
 */
 .logo-web {
-  color: #4d5ae5;
+  color: var(--color-iris);
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 117%;
+  letter-spacing: 0.03em;
 }
 .logo-studio {
-  color: #2e2f42;
+  color: var(--color-navy-blue);
 }
 .list-nav {
-  color: #2e2f42;
+  color: var(--color-navy-blue);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
-.list-addres {
-  color: #434455;
-}
-.list-addres .addres-link:hover,
-.list-addres .addres-link:focus {
-  color: #ffffff;
-  color: #4d5ae5;
+.link {
+  text-decoration: none;
 }
 
+.list-addres .addres-link:hover,
+.list-addres .addres-link:focus {
+  color: var(--color-white);
+  color: var(--color-iris);
+}
+.addres-link {
+  color: var(--color-slate);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
 /**
   |============================
   | Main content
   |============================
 */
 .hero-slogan {
-  color: #ffffff;
+  color: var(--color-white);
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 107%;
 }
 
 .hero-section {
-  background: #2e2f42;
+  background-color: var(--color-navy-blue);
 }
 
 .buton-hero {
-  color: #ffffff;
-  background: #4d5ae5;
+  color: var(--color-white);
+  background-color: var(--color-iris);
 }
 /**
   |============================
@@ -50,26 +92,78 @@ body {
   |============================
 */
 
+.menu {
+  color: var(--color-navy-blue);
+}
+
+.lisl-feature {
+  font-size: 20px;
+  line-height: 120%;
+}
+
+.text-feature {
+  font-weight: 400;
+  font-size: 16px;
+}
+
 /**
   |============================
   | Section What are we doing 2
   |============================
 */
+.image-title {
+  color: var(--color-navy-blue);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 111%;
+}
 
 /**
   |============================
   | Section Our Team 3
   |============================
 */
+.section-team {
+  background-color: var(--color-cloud);
+}
+.team-section-title {
+  color: var(--color-navy-blue);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 111%;
+}
+.team-title {
+  color: var(--color-navy-blue);
+  font-size: 20px;
+  line-height: 120%;
+}
+.team-text {
+  color: var(--color-slate);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 120%;
+}
+.team-list {
+  background-color: var(--color-white);
+}
 
 /**
   |============================
   | Footer
   |============================
 */
+.footer {
+  background-color: var(--color-navy-blue);
+}
+.title-footer {
+  color: var(--color-cloud);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+}
 
 /**
   |============================
   | Button
   |============================
-*/
+*/ ;
