--- a/css/style.css
+++ b/css/style.css
@@ -166,4 +166,40 @@ a {
   |============================
   | Button
   |============================
-*/ ;
+*/
+.buton-all {
+  color: var(--color-white);
+  background-color: var(--color-ocean);
+}
+.about-buton {
+  color: var(--color-iris);
+  background-color: var(--color-cloud);
+}
+
+/**
+  |============================
+  | Section services
+  |============================
+*/
+.title-portfolio {
+  color: var(--color-navy-blue);
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+}
+.text-portfolio {
+  color: var(--color-slate);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+}
+
+/**
+  |============================
+  | 
+  |============================
+*/
