--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ body {
   font-style: normal;
   font-weight: 500;
 }
-a {
+.link {
+  color: inherit;
   text-decoration: none;
 }
 .list {
@@ -33,23 +34,32 @@ a {
 */
 .logo-web {
   color: var(--color-iris);
+  font-family: "Raleway";
+  font-style: normal;
   font-weight: 800;
   font-size: 18px;
-  line-height: 117%;
+  line-height: 1.17;
+  align-items: center;
   letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 .logo-studio {
   color: var(--color-navy-blue);
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 .list-nav {
   color: var(--color-navy-blue);
   font-weight: 500;
   font-size: 16px;
-  line-height: 150%;
+  line-height: 1.5;
   letter-spacing: 0.02em;
-  text-decoration: none;
-}
-.link {
   text-decoration: none;
 }
 
@@ -62,7 +72,7 @@ a {
   color: var(--color-slate);
   font-weight: 400;
   font-size: 16px;
-  line-height: 150%;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
 }
@@ -75,7 +85,9 @@ a {
   color: var(--color-white);
   font-weight: 700;
   font-size: 56px;
-  line-height: 107%;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
 }
 
 .hero-section {
@@ -85,6 +97,10 @@ a {
 .buton-hero {
   color: var(--color-white);
   background-color: var(--color-iris);
+  font-size: 16px;
+  line-height: 1.5;
+  align-items: center;
+  letter-spacing: 0.04em;
 }
 /**
   |============================
@@ -98,12 +114,14 @@ a {
 
 .lisl-feature {
   font-size: 20px;
-  line-height: 120%;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 .text-feature {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1.5;
+  letter-spacing: 0.02em;
 }
 
 /**
@@ -115,7 +133,9 @@ a {
   color: var(--color-navy-blue);
   font-weight: 700;
   font-size: 36px;
-  line-height: 111%;
+  line-height: 1.1;
+
+  letter-spacing: 0.02em;
 }
 
 /**
@@ -130,12 +150,16 @@ a {
   color: var(--color-navy-blue);
   font-weight: 700;
   font-size: 36px;
-  line-height: 111%;
+  line-height: 1.1;
+
+  letter-spacing: 0.02em;
 }
 .team-title {
   color: var(--color-navy-blue);
   font-size: 20px;
-  line-height: 120%;
+  line-height: 1.2;
+
+  letter-spacing: 0.02em;
 }
 .team-text {
   color: var(--color-slate);
@@ -161,7 +185,28 @@ a {
   font-size: 16px;
   line-height: 150%;
 }
+.studio-footer {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
 
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--color-cloud);
+}
+.web-footer {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--color-iris);
+}
 /**
   |============================
   | Button
@@ -187,14 +232,14 @@ a {
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
-  line-height: 120%;
+  line-height: 1.2;
   letter-spacing: 0.02em;
 }
 .text-portfolio {
   color: var(--color-slate);
   font-weight: 400;
   font-size: 16px;
-  line-height: 150%;
+  line-height: 1.5;
   letter-spacing: 0.02em;
 }
 
