--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,6 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.1;
-
   letter-spacing: 0.02em;
 }
 
@@ -215,10 +214,14 @@ body {
 .buton-all {
   color: var(--color-white);
   background-color: var(--color-ocean);
+  letter-spacing: 0.04em;
+  line-height: 1.5;
 }
 .about-buton {
   color: var(--color-iris);
   background-color: var(--color-cloud);
+  letter-spacing: 0.04em;
+  line-height: 1.5;
 }
 
 /**
