--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 body {
   background-color: #ffffff;
-  color: #2e2f42;
+  color: var(--color-slate);
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -34,7 +34,7 @@ body {
 */
 .logo-web {
   color: var(--color-iris);
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -45,7 +45,7 @@ body {
 }
 .logo-studio {
   color: var(--color-navy-blue);
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -77,6 +77,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
+  font-style: normal;
 }
 /**
   |============================
@@ -97,6 +98,8 @@ body {
 }
 
 .buton-hero {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
   cursor: pointer;
   color: var(--color-white);
   background-color: var(--color-iris);
@@ -104,6 +107,7 @@ body {
   line-height: 1.5;
   align-items: center;
   letter-spacing: 0.04em;
+  font-family: inherit;
 }
 .buton-hero:hover {
   color: var(--color-iris);
@@ -125,9 +129,11 @@ body {
 }
 
 .text-feature {
+  color: var(--color-slate);
   font-weight: 400;
   font-size: 1.5;
   letter-spacing: 0.02em;
+  line-height: 1.5;
 }
 
 /**
@@ -137,10 +143,13 @@ body {
 */
 .image-title {
   color: var(--color-navy-blue);
-  font-weight: 700;
+  font-weight: 500;
   font-size: 36px;
   line-height: 1.1;
   letter-spacing: 0.02em;
+  line-height: 1.11;
+  text-align: center;
+  text-transform: capitalize;
 }
 
 /**
@@ -153,13 +162,15 @@ body {
 }
 .team-section-title {
   color: var(--color-navy-blue);
-  font-weight: 700;
+  font-weight: 500;
   font-size: 36px;
-  line-height: 1.1;
-
+  line-height: 1.11;
   letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
 }
 .team-title {
+  font-weight: 500;
   color: var(--color-navy-blue);
   font-size: 20px;
   line-height: 1.2;
@@ -170,7 +181,8 @@ body {
   color: var(--color-slate);
   font-weight: 400;
   font-size: 16px;
-  line-height: 120%;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 .team-list {
   background-color: var(--color-white);
@@ -191,7 +203,7 @@ body {
   line-height: 150%;
 }
 .studio-footer {
-  font-family: "Raleway";
+  font-family: "Raleway" sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -202,7 +214,7 @@ body {
   color: var(--color-cloud);
 }
 .web-footer {
-  font-family: "Raleway";
+  font-family: "Raleway" sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -223,6 +235,7 @@ body {
   background-color: var(--color-ocean);
   letter-spacing: 0.04em;
   line-height: 1.5;
+  font-family: inherit;
 }
 .about-buton {
   cursor: pointer;
@@ -230,6 +243,7 @@ body {
   background-color: var(--color-cloud);
   letter-spacing: 0.04em;
   line-height: 1.5;
+  font-family: inherit;
 }
 
 /**
