--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,7 @@ body {
   |============================
 */
 .buton-all {
+  font-weight: 500;
   cursor: pointer;
   color: var(--color-white);
   background-color: var(--color-ocean);
@@ -248,6 +249,7 @@ body {
   font-family: inherit;
 }
 .about-buton {
+  font-weight: 500;
   cursor: pointer;
   color: var(--color-iris);
   background-color: var(--color-cloud);
