--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,14 @@ body {
   | Button
   |============================
 */
+button {
+  font-weight: 500;
+  cursor: pointer;
+  letter-spacing: 0.04em;
+  line-height: 1.5;
+  font-family: inherit;
+  font-size: 16px;
+}
 .buton-all {
   font-weight: 500;
   cursor: pointer;
