--- a/css/style.css
+++ b/css/style.css
@@ -239,24 +239,7 @@ body {
   | Button
   |============================
 */
-button {
-  font-weight: 500;
-  cursor: pointer;
-  letter-spacing: 0.04em;
-  line-height: 1.5;
-  font-family: inherit;
-  font-size: 16px;
-}
-.buton-all {
-  font-weight: 500;
-  cursor: pointer;
-  color: var(--color-white);
-  background-color: var(--color-ocean);
-  letter-spacing: 0.04em;
-  line-height: 1.5;
-  font-family: inherit;
-  font-size: 16px;
-}
+
 .about-buton {
   font-weight: 500;
   cursor: pointer;
@@ -266,6 +249,10 @@ button {
   line-height: 1.5;
   font-family: inherit;
   font-size: 16px;
+}
+.but-all {
+  color: var(--color-white);
+  background-color: var(--color-ocean);
 }
 
 /**
